<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.panea.quizzapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            android:background="#904FC3F7"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/quizz_description"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="Please enter your name" />

        <TextView
            style="@style/QuestionsStyle"
            android:layout_height="wrap_content"
            android:text="@string/q1" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/q1_male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male" />

            <RadioButton
                android:id="@+id/q1_female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female" />

            <RadioButton
                android:id="@+id/q1_cat_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cat" />
        </RadioGroup>

        <TextView
            style="@style/QuestionsStyle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/q2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/q2a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="I like meeting new people" />

            <CheckBox
                android:id="@+id/q2a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="I like to explore new cultures" />

            <CheckBox
                android:id="@+id/q2a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="I just want to party!" />
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/q3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/q3a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="I have friends all around the world now" />

            <CheckBox
                android:id="@+id/q3a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Everything was perfect" />

            <CheckBox
                android:id="@+id/q3a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="So much new food" />
        </LinearLayout>

        <TextView
            style="@style/QuestionsStyle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/q4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/q4a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yeah" />

            <CheckBox
                android:id="@+id/q4a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="The dormitories" />

            <CheckBox
                android:id="@+id/q4a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Some classes were too hard :(" />
        </LinearLayout>


        <TextView
            style="@style/QuestionsStyle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/q5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/q5a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onlyNah"
                android:text="Nah" />

            <CheckBox
                android:id="@+id/q5a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onlyYeah"
                android:text="Hell Yeah!" />

            <CheckBox
                android:id="@+id/q5a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onlyNah"
                android:text="Just give me that damn schoolarship" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="#4FC3F7"
            android:onClick="doneIt"
            android:text="@string/done_button" />

        <TextView
            android:id="@+id/congratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Congratulations!!!"
            android:textSize="32sp"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>
